# AlphaBee

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS_LEGACY_USAGE.md  CLAUDE.md  ENGINEERING_ROADMAP.md  LICENSE  README.md  ROADMAP.md  ROADMAP1.md  ROADMAP2.md  config.yaml  config.yaml.example  data_collection_failed_auto_fix_design.md  hq  main.py  pyproject.toml  state压缩优化建议.md  test.py  thesisengine-0.2-analysis.md
.ai/skills/alphabee-pipeline-contract-steward/: SKILL.md
.ai/skills/git-commit-push-workflow/: SKILL.md
.github/: copilot-instructions.md
.github/skills/alphabee-schema-steward/: SKILL.md
.github/skills/git-commit-push-workflow/: SKILL.md
alphabee/adapters/: tushare.py
alphabee/adapters/akshare/: industry_mapping.yaml  risk_mapping.yaml
alphabee/adapters/tushare/: company_mapping.yaml  expectation_mapping.yaml  financial_mapping.yaml  industry_mapping.yaml  market_mapping.yaml  operation_mapping.yaml  risk_mapping.yaml
alphabee/agents/: schemas.py  shared_prompts.py
alphabee/agents/anomaly/: __init__.py  engine.py  models.py  patterns.yaml  registry.py  rules.yaml
alphabee/agents/cross/: __init__.py  agent.py  prompts.py
alphabee/config/: __init__.py  loader.py
alphabee/core/: __init__.py  agent_base.py  schemas.py
alphabee/data_fetch/: __init__.py  __main__.py  cli.py  database.py  fingerprint.py  fix_executor.py  integrations.py  models.py  recorder.py  scanner.py  strategies.py
alphabee/harness/: __init__.py  prompts.py  runtime.py  state_compressor.py  utils.py
alphabee/middleware/: common.py  web_search_guard.py
alphabee/orchestrator/: __init__.py  agent.py  analyzers.py  collectors.py  contracts.py  gates.py  prompts.py  reporter.py  state.py
alphabee/providers/: industry.py
alphabee/schemas/: INDEX.yaml  company.yaml  expectation.yaml  financial.yaml  industry.yaml  market.yaml  operation.yaml  risk.yaml
alphabee/static/: all_stocks.csv
alphabee/task_records/: __init__.py  analyzer.py  distiller.py  models.py  prompts.py  recorder.py  store.py
alphabee/tools/: base.py  cache.py  common.py  eastmoney.py  fundamentals.py  industry_fundamentals.py  market_data.py  news.py  tushare_query.py
alphabee/utils/: __init__.py  llm.py  logging_utils.py  pipeline.py  prompts.py  storage.py
alphabee/workflow/: __init__.py  framework_monitor.py
docs/: DOMAIN_CONTEXT_ROADMAP.md  ROADMAP.md
notebooks/: multi_turn_dialogue.ipynb
notebooks/.ipynb_checkpoints/: multi_turn_dialogue-checkpoint.ipynb
scripts/: setup-ai-symlinks.sh
tests/data_fetch/: test_fingerprint.py  test_fix_executor.py  test_models.py  test_recorder.py  test_scanner.py  test_strategies.py
tests/orchestrator/: test_anomaly_signal_flow.py  test_company_context.py  test_pipeline_contracts.py  test_report_review_gate.py  test_thesis_explicit_inputs_flow.py
tests/tools/: test_eastmoney.py
(+153 files in other folders)
