[project]
name = "alphabee"
version = "0.1.0"
description = "An AI-native investment copilot that continuously scans markets like a swarm intelligence system."
authors = [
    {name = "captainemo"}
]
license = "MIT"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langgraph (>=1.2.0,<2.0.0)",
    "mem0ai (>=2.0.2,<3.0.0)",
    "openai (>=2.36.0,<3.0.0)",
    "deepagents[mcp] (>=0.6.12,<0.7.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "tushare (>=1.4.29,<2.0.0)",
    "akshare (>=1.18.62,<2.0.0)",
    "baostock (>=0.9.1,<0.10.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "langchain-middleware-stack (>=0.1.3,<0.2.0)",
    "tavily-python (>=0.7.24,<0.8.0)",
    "ddgs (>=9.14.4,<10.0.0)",
    "opencc-python-reimplemented (>=0.1.7,<0.2.0)",
    "simplegeneric (>=0.8.1,<0.9.0)",
    "langfuse (>=4.7.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "json-repair (>=0.61.2,<0.62.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "claude-agent-sdk (>=0.2.116,<0.3.0)",
    "langchain-mcp-adapters (>=0.3.0,<0.4.0)",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services (LLM, Tushare)",
]

[project.scripts]
alphabee-fetch = "alphabee.data_fetch.cli:main"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]   # load_dotenv() must precede env-var-dependent imports

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pyupgrade (>=3.21.2,<4.0.0)",
    "ruff (>=0.15.22,<0.16.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
